Updated header author

--- a/contacto.html
+++ b/contacto.html
@@ -49,7 +49,7 @@
             <div class="header-title">
                 <a href="index.html">
                     <h1>El arte de la ruina</h1>
-                    <p>Manuel Estévez Murado</p>
+                    <p class="author">Manuel Estévez Murado</p>
                 </a>
             </div>
             <div class="header-links">
@@ -72,7 +72,7 @@
             <div class="header-title">
                 <a href="index.html">
                     <h1>El arte de la ruina</h1>
-                    <p>Manuel Estévez Murado</p>
+                    <p class="author">Manuel Estévez Murado</p>
                 </a>
             </div>
             <div>
