--- a/fotolibro.html
+++ b/fotolibro.html
@@ -50,7 +50,7 @@
                 <div class="header-title">
                     <a href="index.html">
                         <h1>El arte de la ruina</h1>
-                        <p>Manuel Estévez Murado</p>
+                        <p class="author">Manuel Estévez Murado</p>
                     </a>
                 </div>
                 <div class="header-links">
@@ -73,7 +73,7 @@
                 <div class="header-title">
                     <a href="index.html">
                         <h1>El arte de la ruina</h1>
-                        <p>Manuel Estévez Murado</p>
+                        <p class="author">Manuel Estévez Murado</p>
                     </a>
                 </div>
                 <div>
