--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <div class="header-title">
                     <a href="index.html">
                         <h1>El arte de la ruina</h1>
-                        <p>Manuel Estévez Murado</p>
+                        <p class="author">Manuel Estévez Murado</p>
                     </a>
                 </div>
                 <div class="header-links">
@@ -103,7 +103,7 @@
                 <div class="header-title">
                     <a href="index.html">
                         <h1>El arte de la ruina</h1>
-                        <p>Manuel Estévez Murado</p>
+                        <p class="author">Manuel Estévez Murado</p>
                     </a>
                 </div>
                 <div>
