--- a/mapa.html
+++ b/mapa.html
@@ -5,18 +5,18 @@
 <!-- TODO: EDITAR -->
 <head>
   <!-- TODO: EDITAR -->
-  <title>UBICACIONES / EL ARTE DE LA RUINA</title>
+  <title>MAPA / EL ARTE DE LA RUINA</title>
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Joaquín Solla Vázquez, Manuel Estévez Murado">
   <!-- TODO: EDITAR -->
-  <meta name="description" content="Manuel Estévez Murado: Ubicaciones">
+  <meta name="description" content="Manuel Estévez Murado: Mapa">
   <!-- TODO: EDITAR -->
   <meta name="keywords" content="...">
 
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/ubicaciones.css">
+  <link rel="stylesheet" href="css/mapa.css">
   <link rel="icon" href="/assets/favicon-light.ico" media="(prefers-color-scheme: light)">
   <link rel="icon" href="/assets/favicon-dark.ico" media="(prefers-color-scheme: dark)">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -38,7 +38,7 @@
         <p><a href="index.html#fotografias">FOTOGRAFÍAS</a></p>
         <p><a href="fotolibro.html">FOTOLIBRO</a></p>
         <p><a href="informacion.html">INFORMACIÓN</a></p>
-        <p><a href="ubicaciones.html">UBICACIONES</a></p>
+        <p><a href="mapa.html">MAPA</a></p>
         <p><a href="https://www.etsy.com/es/shop/elartedelaruina?ref=seller-platform-mcnav" target="_blank">TIENDA</a></p>
         <p><a href="contacto.html">CONTACTO</a></p>
       </div>
@@ -60,7 +60,7 @@
             &nbsp;
             <a href="informacion.html">INFORMACIÓN</a>
             &nbsp;
-            <a href="ubicaciones.html">UBICACIONES</a>
+            <a href="mapa.html">MAPA</a>
             &nbsp;
             <a href="https://www.etsy.com/es/shop/elartedelaruina?ref=seller-platform-mcnav" target="_blank">TIENDA</a>
             &nbsp;
