--- a/informacion.html
+++ b/informacion.html
@@ -44,7 +44,7 @@
             <p><a href="index.html#fotografias">FOTOGRAFÍAS</a></p>
             <p><a href="fotolibro.html">FOTOLIBRO</a></p>
             <p><a href="informacion.html">INFORMACIÓN</a></p>
-            <p><a href="ubicaciones.html">UBICACIONES</a></p>
+            <p><a href="mapa.html">MAPA</a></p>
             <p><a href="https://www.etsy.com/es/shop/elartedelaruina?ref=seller-platform-mcnav" target="_blank">TIENDA</a></p>
             <p><a href="contacto.html">CONTACTO</a></p>
         </div>
@@ -66,7 +66,7 @@
                     &nbsp;
                     <a href="informacion.html">INFORMACIÓN</a>
                     &nbsp;
-                    <a href="ubicaciones.html">UBICACIONES</a>
+                    <a href="mapa.html">MAPA</a>
                     &nbsp;
                     <a href="https://www.etsy.com/es/shop/elartedelaruina?ref=seller-platform-mcnav" target="_blank">TIENDA</a>
                     &nbsp;
