--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
     document.addEventListener("contextmenu", function(e) {
         e.preventDefault();
     });
+
+    window.onload = function() {
+        var video = document.getElementById('bg-video');
+        video.play();
+    };
 </script>
 
 <div class="header-and-content">
@@ -48,7 +53,7 @@
     <div class="index-home body-section">
 
         <!--<img id="bg-img" src="assets/drone_view_frame_0.webp" alt="">-->
-        <video id="bg-video" autoplay loop muted>
+        <video id="bg-video" loop muted>
             <source src="assets/drone_view_1080_16-9.mp4" type="video/mp4">
             <source src="assets/drone_view_1080_16-9.webm" type="video/webm">
         </video>
