--- a/mapa.html
+++ b/mapa.html
@@ -91,15 +91,15 @@
         <iframe src="https://www.google.com/maps/d/embed?mid=1UYgCgqlTD1264txiQxa4qpLJoErm-jU&ehbc=2E312F" class="map"></iframe>
       </div>
 
-      <div class="vertical-hr-container display-on-big">
+      <!--<div class="vertical-hr-container display-on-big">
         <hr class="vertical-hr">
-      </div>
+      </div>-->
 
-      <div class="right container-49_5">
-        <div class="hr-container display-on-small">
+      <div class="right container-49_5 sides-padding-on-big">
+        <!--<div class="hr-container display-on-small">
           <hr>
-        </div>
-        <h2>Lorem ipsum</h2>
+        </div>-->
+        <h2 style="text-align: center">Lorem ipsum</h2>
         <p style="text-align: justify">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus vel est ex. In vel lectus sed urna mollis dictum. Maecenas id ornare orci. Duis at purus iaculis, mattis odio at, sagittis purus. Duis ac accumsan arcu. Nulla vestibulum est quis bibendum vehicula. Nunc ornare, est id ullamcorper sagittis, eros lectus semper sapien, ac faucibus quam ante a lorem. Pellentesque volutpat ac nunc sit amet dapibus. Vestibulum ut odio sit amet odio lobortis maximus sit amet a nunc.
         </p>
