--- a/informacion.html
+++ b/informacion.html
@@ -91,9 +91,44 @@
         </header>
     </div>
 
-    <div class="body-section-padding margin-top">
+    <div class="body-section-padding margin-top main-container">
 
+        <div class="left container-49_5">
+            <div class="slick">
+                <div>
+                    <img style="width: 100%; border-radius: 5px" src="assets/informacion/informacion_01.webp" alt="">
+                </div>
+                <div>
+                    <img style="width: 100%; border-radius: 5px" src="assets/informacion/informacion_02.webp" alt="">
+                </div>
+                <div>
+                    <img style="width: 100%; border-radius: 5px" src="assets/informacion/informacion_03.webp" alt="">
+                </div>
+            </div>
+        </div>
 
+        <!--<div class="vertical-hr-container display-on-big">
+          <hr class="vertical-hr">
+        </div>-->
+
+        <div class="right container-49_5 sides-padding-on-big">
+            <!--<div class="hr-container display-on-small">
+              <hr>
+            </div>-->
+            <h2 style="text-align: center">Información</h2>
+            <p style="text-align: justify">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus vel est ex. In vel lectus sed urna mollis dictum. Maecenas id ornare orci. Duis at purus iaculis, mattis odio at, sagittis purus. Duis ac accumsan arcu. Nulla vestibulum est quis bibendum vehicula. Nunc ornare, est id ullamcorper sagittis, eros lectus semper sapien, ac faucibus quam ante a lorem. Pellentesque volutpat ac nunc sit amet dapibus. Vestibulum ut odio sit amet odio lobortis maximus sit amet a nunc.
+            </p>
+            <p style="text-align: justify">
+                Pellentesque dictum orci nulla, a laoreet leo luctus eget. Sed hendrerit lectus velit, quis rhoncus ipsum aliquam id. Nulla posuere ut nunc sed porttitor. Duis gravida ex vel orci ullamcorper, hendrerit gravida nisi tempus. Pellentesque euismod, libero sit amet ornare interdum, justo velit consequat nulla, ac pretium leo tortor sit amet erat. Vestibulum a tristique nibh, eu iaculis magna. Morbi egestas vestibulum purus. Vestibulum at est pharetra, varius neque venenatis, auctor sem. Vivamus tempor eget ante quis molestie. Cras rhoncus et ligula luctus venenatis. Donec commodo tellus ex, eu tempor urna fringilla id. Aenean id lorem rutrum, vehicula est id, euismod est. Vivamus aliquet sollicitudin urna, pharetra dapibus lorem tempor sed. Mauris sagittis feugiat velit. Suspendisse vulputate metus at quam feugiat suscipit ac id enim.
+            </p>
+            <br>
+            <h3 style="text-align: center">Agradecimientos</h3>
+            <p style="text-align: justify">
+                Cras odio leo, posuere sit amet auctor vel, imperdiet a est. Aliquam ultricies tellus id orci egestas iaculis. Proin lorem erat, lobortis id blandit a, tincidunt at dolor. Cras ipsum augue, sollicitudin at mattis nec, vulputate ac elit. Donec in nunc justo. Pellentesque nisl dui, pretium lobortis ultricies at, venenatis id augue. Sed mollis arcu arcu, in sagittis urna hendrerit sed. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Donec malesuada pellentesque nulla, at dictum purus tempus eu.
+            </p>
+
+        </div>
 
     </div>
 </div>
