Working on informacion.html

--- a/mapa.html
+++ b/mapa.html
@@ -99,7 +99,7 @@
         <!--<div class="hr-container display-on-small">
           <hr>
         </div>-->
-        <h2 style="text-align: center">Lorem ipsum</h2>
+        <h2 style="text-align: center">Mapa</h2>
         <p style="text-align: justify">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus vel est ex. In vel lectus sed urna mollis dictum. Maecenas id ornare orci. Duis at purus iaculis, mattis odio at, sagittis purus. Duis ac accumsan arcu. Nulla vestibulum est quis bibendum vehicula. Nunc ornare, est id ullamcorper sagittis, eros lectus semper sapien, ac faucibus quam ante a lorem. Pellentesque volutpat ac nunc sit amet dapibus. Vestibulum ut odio sit amet odio lobortis maximus sit amet a nunc.
         </p>
