--- a/fotolibro.html
+++ b/fotolibro.html
@@ -87,6 +87,8 @@
         </div>
 
         <div class="body-section-padding margin-top">
+            <h2 style="text-align: center">Fotolibro</h2>
+
             <p id="turn-device-message"><i class="fa fa-rotate-left"></i>&nbsp;Rota tu dispositivo para una mejor experiencia.</p>
             <div class="book-container margin-top">
                 <iframe id="book" style="width:100%;height:100%" src="https://online.fliphtml5.com/yoelk/okwj/"  seamless="seamless" scrolling="no" frameborder="0" allowtransparency="true" allowfullscreen="true" ></iframe>
@@ -96,7 +98,6 @@
                 <hr>
             </div>-->
             <div>
-                <h2 style="text-align: center">Lorem ipsum</h2>
                 <p id="book-explanation">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sagittis felis sed libero dignissim ullamcorper. Vestibulum egestas augue vitae ullamcorper commodo. Phasellus et maximus tellus, sit amet semper tellus. Quisque lectus mi, ultricies ut neque non, convallis ultricies ante. Sed augue ligula, commodo eu mi sed, pretium vehicula felis. Nam consectetur diam augue, ac posuere felis imperdiet et. Phasellus in aliquet augue. Pellentesque a risus non dui ultrices lobortis. Vestibulum a tortor neque. Fusce felis diam, mattis ut dui nec, imperdiet fermentum mi. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Integer rutrum hendrerit nunc, in ultrices felis eleifend vel. In volutpat eros eget risus condimentum dignissim.</p>
             </div>
         </div>
