--- a/contacto.html
+++ b/contacto.html
@@ -86,7 +86,7 @@
 
     <div class="body-section-padding margin-top main-container">
 
-        <div class="left container-49_5 " style="text-align: center">
+        <div class="left container-49_5 sides-padding-on-big" style="text-align: center">
             <h2>Contacto</h2>
             <p style="text-align: justify">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas et odio consectetur, dictum elit vel, cursus libero. Pellentesque malesuada rhoncus cursus. Aenean iaculis pulvinar facilisis. Fusce id bibendum ex, sit amet vulputate purus. Suspendisse vitae fringilla justo, quis elementum tortor. Pellentesque suscipit, diam eget viverra semper, magna velit bibendum orci, non lobortis ipsum augue ac enim. Quisque vulputate ultrices mi ac pellentesque. Donec aliquam lectus et nisi tristique, sodales molestie nibh vehicula. Morbi viverra aliquet velit, eget bibendum nunc gravida ac.
