--- a/informacion.html
+++ b/informacion.html
@@ -92,7 +92,8 @@
 
     <div class="body-section-padding margin-top main-container">
 
-        <div class="left container-49_5">
+        <div class="left container-49_5 sides-padding-on-big">
+            <h2 class="show-on-big">&nbsp;</h2>
             <div class="slick">
                 <div>
                     <img style="width: 100%; border-radius: 5px" src="assets/informacion/informacion_01.webp" alt="">
@@ -104,6 +105,7 @@
                     <img style="width: 100%; border-radius: 5px" src="assets/informacion/informacion_03.webp" alt="">
                 </div>
             </div>
+            <h3 class="show-on-small">&nbsp;</h3>
         </div>
 
         <!--<div class="vertical-hr-container display-on-big">
