Added informacion.html photos

--- a/informacion.html
+++ b/informacion.html
@@ -96,13 +96,31 @@
             <h2 class="show-on-big">&nbsp;</h2>
             <div class="slick">
                 <div>
-                    <img style="width: 100%; border-radius: 5px" src="assets/informacion/informacion_01.webp" alt="">
+                    <img style="width: 100%; border-radius: 5px" src="assets/informacion/DSCF9269.webp" alt="">
                 </div>
                 <div>
-                    <img style="width: 100%; border-radius: 5px" src="assets/informacion/informacion_02.webp" alt="">
+                    <img style="width: 100%; border-radius: 5px" src="assets/informacion/DJI_0177.webp" alt="">
                 </div>
                 <div>
-                    <img style="width: 100%; border-radius: 5px" src="assets/informacion/informacion_03.webp" alt="">
+                    <img style="width: 100%; border-radius: 5px" src="assets/informacion/DSCF1296.webp" alt="">
+                </div>
+                <div>
+                    <img style="width: 100%; border-radius: 5px" src="assets/informacion/DSCF0765.webp" alt="">
+                </div>
+                <div>
+                    <img style="width: 100%; border-radius: 5px" src="assets/informacion/DSCF0785.webp" alt="">
+                </div>
+                <div>
+                    <img style="width: 100%; border-radius: 5px" src="assets/informacion/DSCF0786.webp" alt="">
+                </div>
+                <div>
+                    <img style="width: 100%; border-radius: 5px" src="assets/informacion/DSCF1220.webp" alt="">
+                </div>
+                <div>
+                    <img style="width: 100%; border-radius: 5px" src="assets/informacion/DSCF3508.webp" alt="">
+                </div>
+                <div>
+                    <img style="width: 100%; border-radius: 5px" src="assets/informacion/DSCF9778-Edit.webp" alt="">
                 </div>
             </div>
             <h3 class="show-on-small">&nbsp;</h3>
