--- a/contacto.html
+++ b/contacto.html
@@ -94,6 +94,8 @@
             <p style="text-align: justify">
                 Vivamus cursus dolor sem, ac luctus ligula rhoncus ac. Fusce ut eros eget libero tristique dictum at vel est. Phasellus maximus gravida nibh, non suscipit justo cursus eget. Integer sit amet est vulputate, blandit neque quis, luctus dolor. Aliquam non ultricies neque. Duis neque nisl, dignissim id vehicula eu, eleifend vel sem. Aliquam nec magna et augue vestibulum luctus et quis ex.
             </p>
+            <h3 class="show-on-small">&nbsp;</h3>
+
         </div>
 
         <!--<div class="vertical-hr-container display-on-big">
