--- a/informacion.html
+++ b/informacion.html
@@ -136,15 +136,31 @@
             </div>-->
             <h2 style="text-align: center">Información</h2>
             <p style="text-align: justify">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus vel est ex. In vel lectus sed urna mollis dictum. Maecenas id ornare orci. Duis at purus iaculis, mattis odio at, sagittis purus. Duis ac accumsan arcu. Nulla vestibulum est quis bibendum vehicula. Nunc ornare, est id ullamcorper sagittis, eros lectus semper sapien, ac faucibus quam ante a lorem. Pellentesque volutpat ac nunc sit amet dapibus. Vestibulum ut odio sit amet odio lobortis maximus sit amet a nunc.
+                El Urbex es una actividad que consiste en visitar lugares abandonados y cuyo acceso está restringido: hospitales, fábricas, escuelas, viviendas o cualquier otra edificación que haya quedado en desuso. Son lugares donde el presente queda de lado para mostrar el pasado, llenos de conocimiento escondido e historias, invadidos por el paso del tiempo y por el deterioro. Lugares donde la naturaleza se abre hueco y paulatinamente recupera lo que antes era suyo. Lugares que habitualmente evitamos o no visitamos por carecer muchas veces de unos mínimos de seguridad, aunque esto los haga más atractivos e interesantes. Lugares asociados frecuentemente a la muerte, a la enfermedad e incluso a lo paranormal, donde las especulaciones, conjeturas o habladurías hacen que confundamos la realidad con la fantasía, alimentando de este modo el romanticismo y el halo de misterio que los envuelve.
             </p>
             <p style="text-align: justify">
-                Pellentesque dictum orci nulla, a laoreet leo luctus eget. Sed hendrerit lectus velit, quis rhoncus ipsum aliquam id. Nulla posuere ut nunc sed porttitor. Duis gravida ex vel orci ullamcorper, hendrerit gravida nisi tempus. Pellentesque euismod, libero sit amet ornare interdum, justo velit consequat nulla, ac pretium leo tortor sit amet erat. Vestibulum a tristique nibh, eu iaculis magna. Morbi egestas vestibulum purus. Vestibulum at est pharetra, varius neque venenatis, auctor sem. Vivamus tempor eget ante quis molestie. Cras rhoncus et ligula luctus venenatis. Donec commodo tellus ex, eu tempor urna fringilla id. Aenean id lorem rutrum, vehicula est id, euismod est. Vivamus aliquet sollicitudin urna, pharetra dapibus lorem tempor sed. Mauris sagittis feugiat velit. Suspendisse vulputate metus at quam feugiat suscipit ac id enim.
+                La fotografía juega un papel importante en la exploración de estos espacios. En primer lugar, es una forma de documentar estos sitios olvidados. Permite capturar su esencia, preservando su memoria, su historia y su belleza, y es que los espacios abandonados pueden ser lugares muy atractivos a su manera: por su estética decadente, su naturaleza tranquila, su historia o su potencial creativo.
             </p>
+            <p style="text-align: justify">
+                El viaje es imprescindible en este trabajo; tanto que he recorrido en total cerca de 1500 km por la provincia de Pontevedra. El Urbex puede entenderse como una excusa para viajar, o por el contrario, el viaje como una excusa para la exploración de estos lugares. Incluso podemos entender la fotografía como una expansión de campo del viaje, o viceversa. Lo cierto es que se complementan a la perfección: la obra forma parte del viaje y el viaje forma parte de la obra.
+            </p>
+            <p style="text-align: justify">
+                El estar en contacto durante varios meses con espacios abandonados de la provincia me ha permitido crear un pensamiento crítico sobre la problemática de la ruina. Es necesario recuperar estos lugares y devolverles la importancia que tuvieron un día. Espero que este trabajo sirva también para poner en valor el patrimonio abandonado y para dar a conocer estas localizaciones.
+            </p>
+            <p style="text-align: justify">
+                Esta página web se crea con el propósito de servir como archivo fotográfico. En esta web podrás consultar unas 200 fotografías, el fotolibro, el mapa con las ubicaciones abandonadas visitadas y una tienda. Todo ello constituye mi Trabajo de Fin de Grado de Bellas Artes.
+            </p>
+
             <br>
             <h3 style="text-align: center">Agradecimientos</h3>
-            <p style="text-align: justify">
-                Cras odio leo, posuere sit amet auctor vel, imperdiet a est. Aliquam ultricies tellus id orci egestas iaculis. Proin lorem erat, lobortis id blandit a, tincidunt at dolor. Cras ipsum augue, sollicitudin at mattis nec, vulputate ac elit. Donec in nunc justo. Pellentesque nisl dui, pretium lobortis ultricies at, venenatis id augue. Sed mollis arcu arcu, in sagittis urna hendrerit sed. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Donec malesuada pellentesque nulla, at dictum purus tempus eu.
+            <p style="text-align: center">
+                A mi padre y a mi madre, por su ayuda y apoyo constantes.
+            </p>
+            <p style="text-align: center">
+                A mis amigos y acompañantes de viaje.
+            </p>
+            <p style="text-align: center">
+                A <a class="content-link" href="https://joaquinsolla.com" target="_blank">Joaquín</a>, por desarrollar esta página web.
             </p>
 
         </div>
