--- a/mapa.html
+++ b/mapa.html
@@ -88,6 +88,7 @@
 
       <div class="left container-49_5">
         <iframe src="https://www.google.com/maps/d/embed?mid=1UYgCgqlTD1264txiQxa4qpLJoErm-jU&ehbc=2E312F" class="map"></iframe>
+        <h3 class="show-on-small">&nbsp;</h3>
       </div>
 
       <!--<div class="vertical-hr-container display-on-big">
