--- a/fotolibro.html
+++ b/fotolibro.html
@@ -92,6 +92,7 @@
             <div class="book-container margin-top">
                 <iframe id="book" style="width:100%;height:100%" src="https://online.fliphtml5.com/yoelk/okwj/"  seamless="seamless" scrolling="no" frameborder="0" allowtransparency="true" allowfullscreen="true" ></iframe>
             </div>
+            <h3 class="show-on-small">&nbsp;</h3>
             <!--
             <div class="hr-container">
                 <hr>
