--- a/informacion.html
+++ b/informacion.html
@@ -150,27 +150,25 @@
             <p style="text-align: justify">
                 Esta página web se crea con el propósito de servir como archivo fotográfico. En esta web podrás consultar unas 200 fotografías, el fotolibro, el mapa con las ubicaciones abandonadas visitadas y una tienda. Todo ello constituye mi Trabajo de Fin de Grado de Bellas Artes.
             </p>
-
-            <br>
-            <h3 style="text-align: center">Agradecimientos</h3>
-            <p style="text-align: center">
-                A mi padre y a mi madre, por su ayuda y apoyo constantes.
-            </p>
-            <p style="text-align: center">
-                A mis amigos y acompañantes de viaje.
-            </p>
-            <p style="text-align: center">
-                A <a class="content-link" href="https://joaquinsolla.com" target="_blank">Joaquín</a>, por desarrollar esta página web.
-            </p>
-
         </div>
 
     </div>
+
 </div>
 
 <footer>
     <p>
         &copy;&nbsp;MANUEL ESTÉVEZ MURADO 2023
+    </p>
+    <p style="text-align: center">&nbsp;</p>
+    <p style="text-align: center">
+        A mi padre y a mi madre, por su ayuda y apoyo constantes.
+    </p>
+    <p style="text-align: center">
+        A mis amigos y acompañantes de viaje.
+    </p>
+    <p style="text-align: center">
+        A <a class="content-link" href="https://joaquinsolla.com" target="_blank">Joaquín</a>, por desarrollar esta página web.
     </p>
 </footer>
 
