--- a/mapa.html
+++ b/mapa.html
@@ -123,11 +123,21 @@
     </div>
   </div>
 
-  <footer>
+<footer>
     <p>
-            &copy;&nbsp;MANUEL ESTÉVEZ MURADO 2023
+        &copy;&nbsp;MANUEL ESTÉVEZ MURADO 2023
     </p>
-  </footer>
+    <p style="text-align: center">&nbsp;</p>
+    <p style="text-align: center">
+        A mi padre y a mi madre, por su ayuda y apoyo constantes.
+    </p>
+    <p style="text-align: center">
+        A mis amigos y acompañantes de viaje.
+    </p>
+    <p style="text-align: center">
+        A <a class="content-link" href="https://joaquinsolla.com" target="_blank">Joaquín</a>, por desarrollar esta página web.
+    </p>
+</footer>
 
 </body>
 </html>
