--- a/fotolibro.html
+++ b/fotolibro.html
@@ -90,7 +90,7 @@
 
             <p id="turn-device-message"><i class="fa fa-rotate-left"></i>&nbsp;Rota tu dispositivo para una mejor experiencia.</p>
             <div class="book-container margin-top">
-                <iframe id="book" style="width:100%;height:100%" src="https://online.fliphtml5.com/yoelk/okwj/"  seamless="seamless" scrolling="no" frameborder="0" allowtransparency="true" allowfullscreen="true" ></iframe>
+                <iframe id="book" style="width:100%;height:100%" src="https://online.fliphtml5.com/yoelk/gwib/"  seamless="seamless" scrolling="no" frameborder="0" allowtransparency="true" allowfullscreen="true" ></iframe>
             </div>
             <h3 class="show-on-small">&nbsp;</h3>
             <!--
