Updated map text

--- a/mapa.html
+++ b/mapa.html
@@ -86,7 +86,7 @@
 
     <div class="body-section-padding map-and-explanation margin-top">
 
-      <div class="left container-49_5">
+      <div class="left container-49_5 sides-padding-on-big">
         <iframe src="https://www.google.com/maps/d/embed?mid=1UYgCgqlTD1264txiQxa4qpLJoErm-jU&ehbc=2E312F" class="map"></iframe>
         <h3 class="show-on-small">&nbsp;</h3>
       </div>
@@ -101,13 +101,11 @@
         </div>-->
         <h2 style="text-align: center">Mapa</h2>
         <p style="text-align: justify">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus vel est ex. In vel lectus sed urna mollis dictum. Maecenas id ornare orci. Duis at purus iaculis, mattis odio at, sagittis purus. Duis ac accumsan arcu. Nulla vestibulum est quis bibendum vehicula. Nunc ornare, est id ullamcorper sagittis, eros lectus semper sapien, ac faucibus quam ante a lorem. Pellentesque volutpat ac nunc sit amet dapibus. Vestibulum ut odio sit amet odio lobortis maximus sit amet a nunc.
+          Tras una intensa búsqueda de lugares abandonados por la provincia de Pontevedra, he reunido aquellos que he fotografiado en este mapa.
         </p>
         <p style="text-align: justify">
-          Pellentesque dictum orci nulla, a laoreet leo luctus eget. Sed hendrerit lectus velit, quis rhoncus ipsum aliquam id. Nulla posuere ut nunc sed porttitor. Duis gravida ex vel orci ullamcorper, hendrerit gravida nisi tempus. Pellentesque euismod, libero sit amet ornare interdum, justo velit consequat nulla, ac pretium leo tortor sit amet erat. Vestibulum a tristique nibh, eu iaculis magna. Morbi egestas vestibulum purus. Vestibulum at est pharetra, varius neque venenatis, auctor sem. Vivamus tempor eget ante quis molestie. Cras rhoncus et ligula luctus venenatis. Donec commodo tellus ex, eu tempor urna fringilla id. Aenean id lorem rutrum, vehicula est id, euismod est. Vivamus aliquet sollicitudin urna, pharetra dapibus lorem tempor sed. Mauris sagittis feugiat velit. Suspendisse vulputate metus at quam feugiat suscipit ac id enim.
-        </p>
-        <p style="text-align: justify">
-          Cras odio leo, posuere sit amet auctor vel, imperdiet a est. Aliquam ultricies tellus id orci egestas iaculis. Proin lorem erat, lobortis id blandit a, tincidunt at dolor. Cras ipsum augue, sollicitudin at mattis nec, vulputate ac elit. Donec in nunc justo. Pellentesque nisl dui, pretium lobortis ultricies at, venenatis id augue. Sed mollis arcu arcu, in sagittis urna hendrerit sed. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Donec malesuada pellentesque nulla, at dictum purus tempus eu.
+          "El fotógrafo circula entre las cosas corrientes para luego ampliar su radio de acción y convertirse en turista de lo extraordinario, de ruinas y acontecimientos"
+          <br><br>Paul Virilio, <i>Estética de la desaparición.</i>
         </p>
         <br>
         <div class="center no-select">
