--- a/fotolibro.html
+++ b/fotolibro.html
@@ -97,8 +97,9 @@
             <div class="hr-container">
                 <hr>
             </div>-->
-            <div>
-                <p id="book-explanation">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sagittis felis sed libero dignissim ullamcorper. Vestibulum egestas augue vitae ullamcorper commodo. Phasellus et maximus tellus, sit amet semper tellus. Quisque lectus mi, ultricies ut neque non, convallis ultricies ante. Sed augue ligula, commodo eu mi sed, pretium vehicula felis. Nam consectetur diam augue, ac posuere felis imperdiet et. Phasellus in aliquet augue. Pellentesque a risus non dui ultrices lobortis. Vestibulum a tortor neque. Fusce felis diam, mattis ut dui nec, imperdiet fermentum mi. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Integer rutrum hendrerit nunc, in ultrices felis eleifend vel. In volutpat eros eget risus condimentum dignissim.</p>
+            <div class="sides-padding-on-big">
+                <p id="book-explanation">
+                    El fotolibro cuenta con 118 fotografías de lugares abandonados, clasificadas en ocho temáticas: Bodegones, Interiores, Naturaleza, Graffitis, Texturas, Geométrica, Grandes construcciones y Aérea. <a class="content-link" href="https://www.etsy.com/es/shop/elartedelaruina?ref=seller-platform-mcnav" target="_blank">En la tienda</a>, se pueden adquirir 24 de estas fotografías en formato postal.                </p>
             </div>
         </div>
 
