--- a/mapa.html
+++ b/mapa.html
@@ -103,11 +103,12 @@
         <p style="text-align: justify">
           Tras una intensa búsqueda de lugares abandonados por la provincia de Pontevedra, he reunido aquellos que he fotografiado en este mapa.
         </p>
-        <p style="text-align: justify">
-          "El fotógrafo circula entre las cosas corrientes para luego ampliar su radio de acción y convertirse en turista de lo extraordinario, de ruinas y acontecimientos"
-          <br><br>Paul Virilio, <i>Estética de la desaparición.</i>
-        </p>
         <br>
+        <p class="sides-padding-on-big" style="text-align: center">
+          "El fotógrafo circula entre las cosas corrientes para luego ampliar su radio de acción y convertirse en turista de lo extraordinario, de ruinas y acontecimientos"
+          <br><br><i>Estética de la desaparición</i>, Paul Virilio
+        </p>
+        <br><br>
         <div class="center no-select">
           <a href="https://www.google.com/maps/d/u/0/viewer?mid=1UYgCgqlTD1264txiQxa4qpLJoErm-jU&ll=42.349057261778455%2C-8.684724432416811&z=11" target="_blank">
             <button>
