--- a/contacto.html
+++ b/contacto.html
@@ -84,30 +84,10 @@
         </header>
     </div>
 
-    <div class="body-section-padding margin-top main-container">
+    <div class="body-section-padding margin-top main-container sides-padding-on-big">
 
-        <div class="left container-49_5 sides-padding-on-big" style="text-align: center">
+        <div id="email-form">
             <h2>Contacto</h2>
-            <p style="text-align: justify">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas et odio consectetur, dictum elit vel, cursus libero. Pellentesque malesuada rhoncus cursus. Aenean iaculis pulvinar facilisis. Fusce id bibendum ex, sit amet vulputate purus. Suspendisse vitae fringilla justo, quis elementum tortor. Pellentesque suscipit, diam eget viverra semper, magna velit bibendum orci, non lobortis ipsum augue ac enim. Quisque vulputate ultrices mi ac pellentesque. Donec aliquam lectus et nisi tristique, sodales molestie nibh vehicula. Morbi viverra aliquet velit, eget bibendum nunc gravida ac.
-            </p>
-            <p style="text-align: justify">
-                Vivamus cursus dolor sem, ac luctus ligula rhoncus ac. Fusce ut eros eget libero tristique dictum at vel est. Phasellus maximus gravida nibh, non suscipit justo cursus eget. Integer sit amet est vulputate, blandit neque quis, luctus dolor. Aliquam non ultricies neque. Duis neque nisl, dignissim id vehicula eu, eleifend vel sem. Aliquam nec magna et augue vestibulum luctus et quis ex.
-            </p>
-            <h3 class="show-on-small">&nbsp;</h3>
-
-        </div>
-
-        <!--<div class="vertical-hr-container display-on-big">
-            <hr class="vertical-hr">
-        </div>
-        <div class="hr-container display-on-small">
-            <hr>
-        </div>-->
-
-        <div id="email-form" class="right container-49_5">
-            <h2 class="display-on-big">Enviar email</h2>
-            <br class="display-on-small">
             <div class="input-container">
                 <label for="name-input">Nombre y apellidos</label><br>
                 <input id="name-input" placeholder="">
