fotolibro.html updated

--- a/fotolibro.html
+++ b/fotolibro.html
@@ -87,6 +87,13 @@
 
         <div class="body-section-padding margin-top">
             <h2 style="text-align: center">Fotolibro</h2>
+            <div style="justify-content: center; display: flex">
+                <div class="container-49_5 sides-padding-on-big justify-and-hyphens">
+                    <p id="book-explanation">
+                        El fotolibro cuenta con 118 fotografías de lugares abandonados, clasificadas en ocho temáticas: Bodegones, Interiores, Naturaleza, Graffitis, Texturas, Geométrica, Grandes construcciones y Aérea. <a class="content-link" href="https://www.etsy.com/es/shop/elartedelaruina?ref=seller-platform-mcnav" target="_blank">En la tienda</a>, se pueden adquirir 24 de estas fotografías en formato postal.
+                    </p>
+                </div>
+            </div>
 
             <p id="turn-device-message"><i class="fa fa-rotate-left"></i>&nbsp;Rota tu dispositivo para una mejor experiencia.</p>
             <div class="book-container margin-top">
@@ -97,10 +104,6 @@
             <div class="hr-container">
                 <hr>
             </div>-->
-            <div class="sides-padding-on-big">
-                <p id="book-explanation">
-                    El fotolibro cuenta con 118 fotografías de lugares abandonados, clasificadas en ocho temáticas: Bodegones, Interiores, Naturaleza, Graffitis, Texturas, Geométrica, Grandes construcciones y Aérea. <a class="content-link" href="https://www.etsy.com/es/shop/elartedelaruina?ref=seller-platform-mcnav" target="_blank">En la tienda</a>, se pueden adquirir 24 de estas fotografías en formato postal.                </p>
-            </div>
         </div>
 
     </div>
