--- a/informacion.html
+++ b/informacion.html
@@ -126,28 +126,21 @@
             <h3 class="show-on-small">&nbsp;</h3>
         </div>
 
-        <!--<div class="vertical-hr-container display-on-big">
-          <hr class="vertical-hr">
-        </div>-->
-
         <div class="right container-49_5 sides-padding-on-big">
-            <!--<div class="hr-container display-on-small">
-              <hr>
-            </div>-->
             <h2 style="text-align: center">Información</h2>
-            <p style="text-align: justify">
+            <p class="justify-and-hyphens">
                 El Urbex es una actividad que consiste en visitar lugares abandonados y cuyo acceso está restringido: hospitales, fábricas, escuelas, viviendas o cualquier otra edificación que haya quedado en desuso. Son lugares donde el presente queda de lado para mostrar el pasado, llenos de conocimiento escondido e historias, invadidos por el paso del tiempo y por el deterioro. Lugares donde la naturaleza se abre hueco y paulatinamente recupera lo que antes era suyo. Lugares que habitualmente evitamos o no visitamos por carecer muchas veces de unos mínimos de seguridad, aunque esto los haga más atractivos e interesantes. Lugares asociados frecuentemente a la muerte, a la enfermedad e incluso a lo paranormal, donde las especulaciones, conjeturas o habladurías hacen que confundamos la realidad con la fantasía, alimentando de este modo el romanticismo y el halo de misterio que los envuelve.
             </p>
-            <p style="text-align: justify">
+            <p class="justify-and-hyphens">
                 La fotografía juega un papel importante en la exploración de estos espacios. En primer lugar, es una forma de documentar estos sitios olvidados. Permite capturar su esencia, preservando su memoria, su historia y su belleza, y es que los espacios abandonados pueden ser lugares muy atractivos a su manera: por su estética decadente, su naturaleza tranquila, su historia o su potencial creativo.
             </p>
-            <p style="text-align: justify">
+            <p class="justify-and-hyphens">
                 El viaje es imprescindible en este trabajo; tanto que he recorrido en total cerca de 1500 km por la provincia de Pontevedra. El Urbex puede entenderse como una excusa para viajar, o por el contrario, el viaje como una excusa para la exploración de estos lugares. Incluso podemos entender la fotografía como una expansión de campo del viaje, o viceversa. Lo cierto es que se complementan a la perfección: la obra forma parte del viaje y el viaje forma parte de la obra.
             </p>
-            <p style="text-align: justify">
+            <p class="justify-and-hyphens">
                 El estar en contacto durante varios meses con espacios abandonados de la provincia me ha permitido crear un pensamiento crítico sobre la problemática de la ruina. Es necesario recuperar estos lugares y devolverles la importancia que tuvieron un día. Espero que este trabajo sirva también para poner en valor el patrimonio abandonado y para dar a conocer estas localizaciones.
             </p>
-            <p style="text-align: justify">
+            <p class="justify-and-hyphens">
                 Esta página web se crea con el propósito de servir como archivo fotográfico. En esta web podrás consultar unas 200 fotografías, el fotolibro, el mapa con las ubicaciones abandonadas visitadas y una tienda. Todo ello constituye mi Trabajo de Fin de Grado de Bellas Artes.
             </p>
         </div>
