--- a/mapa.html
+++ b/mapa.html
@@ -100,11 +100,11 @@
           <hr>
         </div>-->
         <h2 style="text-align: center">Mapa</h2>
-        <p style="text-align: justify">
+        <p class="justify-and-hyphens">
           Tras una intensa búsqueda de lugares abandonados por la provincia de Pontevedra, he reunido aquellos que he fotografiado en este mapa.
         </p>
         <br>
-        <p class="sides-padding-on-big" style="text-align: center">
+        <p class="sides-padding-on-big center-and-hyphens">
           "El fotógrafo circula entre las cosas corrientes para luego ampliar su radio de acción y convertirse en turista de lo extraordinario, de ruinas y acontecimientos"
           <br><br><i>Estética de la desaparición</i>, Paul Virilio
         </p>
