--- a/informacion.html
+++ b/informacion.html
@@ -92,8 +92,10 @@
 
     <div class="body-section-padding margin-top main-container">
 
-        <div class="left container-49_5 sides-padding-on-big">
-            <h2 class="show-on-big">&nbsp;</h2>
+        <div class="left container-49_5 sides-padding-on-big show-on-big" style="height: 1px;">
+            <p class="show-on-big">&nbsp;</p>
+        </div>
+        <div class="left container-49_5 sides-padding-on-big fix-on-big">
             <div class="slick">
                 <div>
                     <img style="width: 100%; border-radius: 5px" src="assets/informacion/DSCF9269.webp" alt="">
