--- a/contacto.html
+++ b/contacto.html
@@ -84,10 +84,24 @@
         </header>
     </div>
 
-    <div class="body-section-padding margin-top main-container sides-padding-on-big">
+    <div class="body-section-padding margin-top main-container">
 
-        <div id="email-form">
+        <div class="left container-49_5 sides-padding-on-big show-on-big" style="height: 1px;">
+            <p class="show-on-big">&nbsp;</p>
+        </div>
+        <div class="left container-49_5 sides-padding-on-big fix-on-big">
+            <div>
+                <img style="width: 100%; border-radius: 5px" src="assets/contacto/DSCF0859.webp" alt="">
+            </div>
+            <h3 class="show-on-small">&nbsp;</h3>
+        </div>
+
+        <div id="email-form" class="right container-49_5 sides-padding-on-big">
             <h2>Contacto</h2>
+            <p class="justify-and-hyphens sides-padding-on-big">
+                Si tiene alguna consulta sobre <i>El arte de la ruina</i> no dude en ponerse en contacto conmigo. Responderé a la mayor brevedad posible.
+            </p>
+            <br>
             <div class="input-container">
                 <label for="name-input">Nombre y apellidos</label><br>
                 <input id="name-input" placeholder="">
