--- a/informacion.html
+++ b/informacion.html
@@ -96,6 +96,7 @@
             <p class="show-on-big">&nbsp;</p>
         </div>
         <div class="left container-49_5 sides-padding-on-big fix-on-big">
+            <h2 class="show-on-big">&nbsp;</h2>
             <div class="slick">
                 <div>
                     <img style="width: 100%; border-radius: 5px" src="assets/informacion/DSCF9269.webp" alt="">
